--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,8 @@
     "parser": "babel",
     "printWidth":120,
     "tabWidth": 2,
-    "useTabs": false
+    "useTabs": false,
+    "bracketSpacing": true,
+    "proseWrap": "always",
+    "trailingComma": "all"
 }
