--- a/package.json
+++ b/package.json
@@ -4,15 +4,44 @@
     "description": "图片分享平台，前端项目",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev_____": "webpack-dev-server --config ./webpack/dev.js",
+        "serve": "webpack-dev-server --progress --config ./webpack.config.js",
+        "build": "webpack"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@babel/core": "^7.10.3",
+        "@babel/preset-env": "^7.10.3",
+        "@babel/preset-react": "^7.10.1",
+        "@types/friendly-errors-webpack-plugin": "^0.1.2",
+        "@types/react": "^16.9.41",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.5",
+        "antd": "^4.3.5",
+        "babel-loader": "^8.1.0",
+        "babel-plugin-import": "^1.13.0",
+        "css-loader": "^3.6.0",
         "eslint": "^7.3.1",
+        "file-loader": "^6.0.0",
+        "friendly-errors-webpack-plugin": "^1.7.0",
+        "html-webpack-plugin": "^4.3.0",
+        "less-loader": "^6.1.2",
+        "node-sass": "^4.14.1",
+        "postcss": "^7.0.32",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.2.1",
         "ts-lint": "^4.5.1",
         "ts-loader": "^7.0.5",
-        "typescript": "^3.9.5"
+        "typescript": "^3.9.5",
+        "url-loader": "^4.1.0",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     }
 }
