--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev_____": "webpack-dev-server --config ./webpack/dev.js",
-        "serve": "webpack-dev-server --progress --config ./webpack.config.js",
-        "build": "webpack"
+        "dev": "npm start",
+        "start": "webpack-dev-server --progress --config ./webpack/webpack.config.dev.js",
+        "build": "webpack --progress --config ./webpack/webpack.config.dev.js"
     },
     "keywords": [],
     "author": "",
