--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "compilerOptions": {
-        "target": "ES2015"                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
-        "module": "commonjs"                        /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
-        "allowJs": true,                       /* Allow javascript files to be compiled. */
-        "jsx": "react"                         /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
+        "target": "es6"                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
+        "module": "es2015"                        /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
+        "allowJs": false,                       /* Allow javascript files to be compiled. */
+        "checkJs": false                       /* Report errors in .js files. */,
+        "jsx": "preserve"                         /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
         "sourceMap": true                      /* Generates corresponding '.map' file. */,
         "outDir": "./dist"                     /* Redirect output structure to the directory. */,
         "strict": true                         /* Enable all strict type-checking options. */,
         "noImplicitAny": true                  /* Raise error on expressions and declarations with an implied 'any' type. */,
         "esModuleInterop": true                /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-        "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+        "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+        "moduleResolution": "node",            // 决定如何处理模块   很重要否则会报找不到类型申明
     }
 }
