--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "wallpaper",
+    "name": "my-webpack-cli",
     "version": "1.0.0",
-    "description": "图片分享平台，前端项目",
+    "description": "custome webpack-cli, to serve and build project",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,6 +21,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
         "antd": "^4.3.5",
+        "autoprefixer": "^9.8.4",
         "babel-loader": "^8.1.0",
         "babel-plugin-import": "^1.13.0",
         "css-loader": "^3.6.0",
@@ -30,7 +31,7 @@
         "html-webpack-plugin": "^4.3.0",
         "less-loader": "^6.1.2",
         "node-sass": "^4.14.1",
-        "postcss": "^7.0.32",
+        "postcss-loader": "^3.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
