--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "npm start",
-        "start": "webpack-dev-server --progress --config ./webpack/webpack.config.dev.js",
-        "build": "webpack --progress --config ./webpack/webpack.config.dev.js"
+        "start": "webpack-dev-server  --config ./webpack/webpack.config.dev.js",
+        "build": "webpack  --config ./webpack/webpack.config.dev.js"
     },
     "keywords": [],
     "author": "",
@@ -24,12 +24,14 @@
         "autoprefixer": "^9.8.4",
         "babel-loader": "^8.1.0",
         "babel-plugin-import": "^1.13.0",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.6.0",
         "eslint": "^7.3.1",
         "file-loader": "^6.0.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "^4.3.0",
         "less-loader": "^6.1.2",
+        "node-notifier": "^7.0.1",
         "node-sass": "^4.14.1",
         "postcss-loader": "^3.0.0",
         "react": "^16.13.1",
