--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "npm start",
         "start": "webpack-dev-server  --config ./webpack/webpack.config.dev.js",
-        "build": "webpack  --config ./webpack/webpack.config.dev.js"
+        "build": "webpack  --config ./webpack/webpack.config.prod.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "antd": "^4.3.5",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0"
+    },
+    "devDependencies": {
         "@babel/core": "^7.10.3",
         "@babel/preset-env": "^7.10.3",
         "@babel/preset-react": "^7.10.1",
@@ -20,7 +26,6 @@
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
-        "antd": "^4.3.5",
         "autoprefixer": "^9.8.4",
         "babel-loader": "^8.1.0",
         "babel-plugin-import": "^1.13.0",
@@ -34,9 +39,6 @@
         "node-notifier": "^7.0.1",
         "node-sass": "^4.14.1",
         "postcss-loader": "^3.0.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-router-dom": "^5.2.0",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
         "ts-lint": "^4.5.1",
@@ -45,6 +47,7 @@
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "uglifyjs-webpack-plugin": "^2.2.0"
     }
 }
