--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "npm start",
         "start": "webpack-dev-server  --config ./webpack/webpack.config.dev.js",
-        "build": "webpack  --config ./webpack/webpack.config.prod.js"
+        "build": "npm run build:dev",
+        "build:dev": "webpack  --config ./webpack/webpack.config.dev.js",
+        "build:prod": "webpack  --config ./webpack/webpack.config.prod.js"
     },
     "keywords": [],
     "author": "",
@@ -36,6 +38,7 @@
         "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "^4.3.0",
         "less-loader": "^6.1.2",
+        "mini-css-extract-plugin": "^0.9.0",
         "node-notifier": "^7.0.1",
         "node-sass": "^4.14.1",
         "postcss-loader": "^3.0.0",
@@ -44,10 +47,10 @@
         "ts-lint": "^4.5.1",
         "ts-loader": "^7.0.5",
         "typescript": "^3.9.5",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
-        "uglifyjs-webpack-plugin": "^2.2.0"
+        "webpack-dev-server": "^3.11.0"
     }
 }
