--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "style-loader": "^1.2.1",
         "ts-lint": "^4.5.1",
         "ts-loader": "^7.0.5",
+        "tslint-config-prettier": "^1.18.0",
+        "tslint-react": "^5.0.0",
         "typescript": "^3.9.5",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^4.1.0",
